# dirtopdf-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  start.sh
docs/: INDEX.md  OPTIMIZACIONES.md  PERFORMANCE_REPORT.md
src/: __init__.py  config.py  main.py
src/cli/: commands.py
src/core/: converter.py
src/infrastructure/: file_handler.py
src/utils/: banner.py  helpers.py
